samples/_failures_safe/1761476738_ca7cbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e66456e7.c: In function ‘main’:
./samples/SAFE/__tmp_e66456e7.c:151:9: error: expected declaration or statement at end of input
  151 |         printf("Determinant: %.2f\n", det);
      |         ^~~~~~
./samples/SAFE/__tmp_e66456e7.c:151:9: error: expected declaration or statement at end of input
